[feature] retrofit added and initial api tie-in done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ILoveZappos</string>
+    <string name="app_name">I ♥ Zappos</string>
     <string name="action_settings">Settings</string>
 </resources>
