--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">I ♥ Zappos</string>
     <string name="action_settings">Settings</string>
+    <string name="search_hint">Search</string>
+    <string name="title_activity_product_page">ProductPageActivity</string>
 </resources>
