--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search</string>
     <string name="title_activity_product_page">ProductPageActivity</string>
+    <string name="made_by">by </string>
 </resources>
