--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">I ♥ Zappos</string>
     <string name="action_settings">Settings</string>
+    <string name="action_cart">Settings</string>
     <string name="search_hint">Search</string>
     <string name="title_activity_product_page">ProductPageActivity</string>
     <string name="made_by">by </string>
